<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".CrearEmpresa">

    <ImageView
        android:id="@+id/img_view_guardar"
        android:layout_width="64dp"
        android:layout_height="68dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@mipmap/save" />

    <ImageView
        android:id="@+id/img_view_cancelar"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/img_view_guardar"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@mipmap/cancel" />

    <EditText
        android:id="@+id/txt_ruc"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/empresa_ruc"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empresa" />

    <EditText
        android:id="@+id/txt_razon_social"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/empresa_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_ruc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_ruc"
        app:layout_constraintTop_toBottomOf="@+id/txt_ruc" />

    <EditText
        android:id="@+id/txt_direccion"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/empresa_direccion"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_razon_social"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_razon_social"
        app:layout_constraintTop_toBottomOf="@+id/txt_razon_social" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/empresa_telefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_direccion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_direccion"
        app:layout_constraintTop_toBottomOf="@+id/txt_direccion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_telefono"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/txt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono" />

    <EditText
        android:id="@+id/txt_id_empresa"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/empresa_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>