<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEmpleado">

    <EditText
        android:id="@+id/txt_telefono_emp"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/empleado_telefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fec_nac" />

    <EditText
        android:id="@+id/txt_fec_nac"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/empleado_fec_nac"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <EditText
        android:id="@+id/txt_dni"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/empleado_dni"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/empleado_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dni" />

    <ImageView
        android:id="@+id/img_view_cancelar_emp"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_longitud"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/img_view_guardar_emp"
        app:layout_constraintTop_toBottomOf="@+id/txt_longitud"
        app:srcCompat="@mipmap/cancel" />

    <ImageView
        android:id="@+id/img_view_guardar_emp"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/txt_latitud"
        app:layout_constraintTop_toBottomOf="@+id/txt_latitud"
        app:srcCompat="@mipmap/save" />

    <EditText
        android:id="@+id/txt_id_empresa_cre_empl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="0"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_emp" />

    <EditText
        android:id="@+id/txt_latitud"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="LAT."
        android:inputType="textPersonName"
        android:translationX="-20dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_longitud"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_id_empresa_cre_empl"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empresa_cre_empl" />

    <EditText
        android:id="@+id/txt_longitud"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="LONG."
        android:inputType="textPersonName"
        android:translationX="25dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_id_empresa_cre_empl"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empresa_cre_empl" />

</androidx.constraintlayout.widget.ConstraintLayout>