<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarEmpleado">

    <EditText
        android:id="@+id/txt_longitud_emp"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="LONG."
        android:inputType="textPersonName"
        android:translationX="-15dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_telefono_emp_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_emp_editar" />

    <EditText
        android:id="@+id/txt_latitud_emp"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="LAT."
        android:inputType="textPersonName"
        android:translationX="-20dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_longitud_emp"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_emp_editar" />

    <EditText
        android:id="@+id/txt_dni_editar"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/empleado_dni"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empleado_editar" />

    <EditText
        android:id="@+id/txt_nombre_editar"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/empleado_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_dni_editar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_dni_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_dni_editar" />

    <EditText
        android:id="@+id/txt_fec_nac_editar"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/empleado_fec_nac"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombre_editar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_editar" />

    <EditText
        android:id="@+id/txt_telefono_emp_editar"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/empleado_telefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_fec_nac_editar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_fec_nac_editar"
        app:layout_constraintTop_toBottomOf="@+id/txt_fec_nac_editar" />

    <ImageView
        android:id="@+id/img_view_guardar_emp_editar"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/img_view_cancelar_emp_editar"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="@+id/txt_latitud_emp"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empresa_empl"
        app:srcCompat="@mipmap/save" />

    <ImageView
        android:id="@+id/img_view_cancelar_emp_editar"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_longitud_emp"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_empresa_empl"
        app:srcCompat="@mipmap/cancel" />

    <TextView
        android:id="@+id/txt_id_empleado_editar"
        android:layout_width="76dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:hint="0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_id_empresa_empl"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="ID Empresa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_longitud_emp"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/txt_latitud_emp"
        app:layout_constraintTop_toBottomOf="@+id/txt_latitud_emp" />
</androidx.constraintlayout.widget.ConstraintLayout>